# mediapipe_detector

./: .gitignore  README.md  pyproject.toml
src/: api.py  media.py  video.py
