[project]
name = "media"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Zappi",email = "leo.zappi@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mediapipe", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
